# momantu_fetch

./: .gitmodules  README.md
apriltag_cfg/config/: tags.yaml
apriltag_cfg/launch/: fetch_continuous_detection.launch
fetch_common/: CMakeLists.txt  package.xml
fetch_common/config/: Nav_README.md  fetch_laser.lua
fetch_common/launch/: cartographer_2d.launch  flexbe_connect.launch  moveit.launch
fetch_common/rviz/: moveit.rviz
fetch_common/scripts/: demo.py  disco.py  wave.py
fetch_common/src/: env.cpp  env.h  fetch_robot.cpp  fetch_robot.h  my_utility.cpp  my_utility.h  robot_server.cpp
fetch_real/: CMakeLists.txt  package.xml
fetch_real/config/: amcl.yaml  costmap_common.yaml  costmap_local.yaml
fetch_real/config/fetch/: costmap_common.yaml
fetch_real/launch/: demo.launch  fetch_nav.launch  pub_images.launch  robot_service.launch  sub_image.launch
fetch_real/launch/include/: amcl.launch.xml  fetch.launch.xml  move_base.launch.xml  move_base.launch.xml.bk
fetch_real/maps/: d206.pgm  d206.yaml  sistD2.pgm  sistD2.yaml
fetch_sim/: CMakeLists.txt  package.xml
fetch_sim/config/: amcl.yaml  costmap_common.yaml  costmap_local.yaml  fetch_laser.lua  fetch_nav.rviz  move_base.yaml
fetch_sim/config/fetch/: move_base.yaml
fetch_sim/launch/: demo.launch  fetch_nav.launch  gazebo_simulation.launch  robot_service.launch  world_only.launch
fetch_sim/launch/include/: amcl.launch.xml  fetch.launch.xml  head_camera.launch.xml  move_base.launch.xml
fetch_sim/maps/: big_indoor.pgm  big_indoor.yaml
fetch_sim/models/Indoor_4rooms/: model.config  model.sdf
fetch_sim/models/can_coke/: model.sdf
fetch_sim/models/room/: model.sdf
fetch_sim/worlds/: four_rooms.world
